--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -23,7 +23,7 @@
         textAlign: 'center',
         boxShadow: '0 2px 4px rgba(0,0,0,0.05)',
         transition: 'all 0.3s',
-        cursor: 'pointer',
+        cursor: item.url ? 'pointer' : 'default',
       }}
       onMouseOver={e => {
         e.currentTarget.style.transform = 'translateY(-2px)';
@@ -35,17 +35,16 @@
         e.currentTarget.style.boxShadow = '0 2px 4px rgba(0,0,0,0.05)';
         e.currentTarget.style.borderColor = '#ddd';
       }}
+      onClick={() => {
+        if (item.url) {
+          window.open(item.url, '_blank');
+        }
+      }}
     >
       <div style={{ fontSize: '32px', marginBottom: '8px' }}>{item.emoji}</div>
-      {item.url ? (
-        <a href={item.url} target="_blank" rel="noopener noreferrer" style={{ textDecoration: 'none', color: '#333', fontWeight: '500' }}>
-          {item.name}
-        </a>
-      ) : (
-        <div style={{ color: '#333', fontWeight: '500' }}>
-          {item.name}: {item.text}
-        </div>
-      )}
+      <div style={{ color: '#333', fontWeight: '500' }}>
+        {item.url ? item.name : `${item.name}: ${item.text}`}
+      </div>
     </div>
   ))}
 
