--- a/docs/life/座右铭.md
+++ b/docs/life/座右铭.md
@@ -4,8 +4,6 @@
 路虽远，行则将至
 ```
 
-
-
 * 2024/3/2
 
 ```
@@ -72,5 +70,5 @@ step by step, day by day
 * 2025/9/14
 
 ```
-退去昔日旧枷锁,今日方知我是我。—— 千年
+退去昔日旧枷锁,今日方知我是我。— 千年
 ```
