--- a/docs/read/程序员等级.md
+++ b/docs/read/程序员等级.md
@@ -1,15 +1,6 @@
 # 程序员等级
 
-本文来自: [https://github.com/bennyhuo/programmer-levels](https://github.com/bennyhuo/programmer-levels)
-
-# 版本
-
-| 版本号 | 更新记录                                                     |
-| ------ | ------------------------------------------------------------ |
-| v0.1   | 完成所有级别的描述                                           |
-| v0.2   | 优化 7 级的描述，去除冗余部分                                |
-| v0.3   | 1. 优化 0 级的描述，将 Turbo C 替换成 Python<br>2. 删除 4 级中有关快捷键的描述 |
-| v0.4   | 优化内容结构，完善评估方法，新增常见问题                     |
+本文来自: [https://github.com/bennyhuo/programmer-levels](https://github.com/bennyhuo/programmer-levels)             |
 
 # 协议
 
@@ -185,5 +176,6 @@
 ## 10 级：计算机科学家
 
 * 您已经是顶级专家了，我们无法对您做出任何描述和定义，一切皆有可能。
+
 
 ----
