--- a/docs/read/程序员等级.md
+++ b/docs/read/程序员等级.md
@@ -1,6 +1,6 @@
 # 程序员等级
 
-本文来自: [https://github.com/bennyhuo/programmer-levels](https://github.com/bennyhuo/programmer-levels)             |
+本文来自: [https://github.com/bennyhuo/programmer-levels](https://github.com/bennyhuo/programmer-levels)
 
 # 协议
 
@@ -179,3 +179,4 @@
 
 
 ----
+
